--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
-    "fs-extra": "^0.30.0",
+    "fs-extra": "^1.0.0",
     "lodash": "^4.16.4",
     "multer": "^1.2.0",
     "rimraf": "^2.5.4",
-    "session-file-store": "^0.2.1",
-    "uuid": "^2.0.3",
+    "session-file-store": "^1.0.0",
+    "uuid": "^3.0.0",
     "yargs": "^6.0.0"
   },
   "devDependencies": {
@@ -34,15 +34,16 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "classnames": "^2.2.5",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.0",
     "flexboxgrid": "^6.3.1",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.16.0",
     "react": "^15.3.2",
+    "react-dom": "^15.4.0",
     "react-flexbox-grid": "^0.10.2",
     "react-redux": "^4.4.5",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
