--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "fs-extra": "^1.0.0",
+    "linebyline":"1.3.0",
     "lodash": "^4.16.4",
     "multer": "^1.2.0",
     "rimraf": "^2.5.4",
