--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "fs-extra": "^1.0.0",
-    "line-by-line": "0.1.5",
+    "line-reader": "^0.4.0",
     "lodash": "^4.16.4",
     "multer": "^1.2.0",
     "rimraf": "^2.5.4",
