--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ./test/mocha_runner ./test/**/*.js",
     "predev": "rimraf ./files ./sessions",
     "dev": "NODE_ENV=development node server.js",
     "prebuild": "rimraf ./dist",
@@ -34,12 +34,14 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.26.0",
     "flexboxgrid": "^6.3.1",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.16.0",
+    "mocha": "^3.1.2",
     "react": "^15.3.2",
     "react-dom": "^15.4.0",
     "react-flexbox-grid": "^0.10.2",
