--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --require ./test/mocha_runner ./test/**/*.js",
+    "test-watch": "npm test -- --watch --watch-extension js",
     "predev": "rimraf ./files ./sessions",
     "dev": "NODE_ENV=development node server.js",
     "prebuild": "rimraf ./dist",
@@ -18,7 +19,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "fs-extra": "^1.0.0",
-    "line-by-line":"0.1.5",
+    "line-by-line": "0.1.5",
     "lodash": "^4.16.4",
     "multer": "^1.2.0",
     "rimraf": "^2.5.4",
@@ -35,6 +36,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.26.0",
     "flexboxgrid": "^6.3.1",
