--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rimraf ./files ./sessions",
     "test": "mocha --require ./test/mocha_runner ./test/**/*.js",
     "test-watch": "npm test -- --watch --watch-extension js",
     "predev": "rimraf ./files ./sessions",
