--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mocha": "^3.1.2",
     "react": "^15.3.2",
     "react-dom": "^15.4.0",
+    "react-dropzone": "^3.7.3",
     "react-flexbox-grid": "^0.10.2",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^2.0.1",
