--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf ./files ./sessions",
+    "pretest": "eslint ./src/",
     "test": "mocha --require ./test/mocha_runner ./test/**/*.js",
     "test-watch": "npm test -- --watch --watch-extension js",
     "prebuild": "rimraf ./dist",
