--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
@@ -40,6 +41,9 @@
     "chai-as-promised": "^6.0.0",
     "classnames": "^2.2.5",
     "css-loader": "^0.26.0",
+    "eslint": "^3.11.1",
+    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-react": "^6.7.1",
     "flexboxgrid": "^6.3.1",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
