--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "material-ui": "^0.16.0",
     "mocha": "^3.1.2",
     "react": "^15.3.2",
+    "react-ga": "^2.1.2",
     "react-dom": "^15.4.0",
     "react-dropzone": "^3.7.3",
     "react-flexbox-grid": "^0.10.2",
