--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.16.0",
     "mocha": "^3.1.2",
+    "moment": "^2.17.1",
     "react": "^15.3.2",
-    "react-ga": "^2.1.2",
     "react-dom": "^15.4.0",
     "react-dropzone": "^3.7.3",
     "react-flexbox-grid": "^0.10.2",
+    "react-ga": "^2.1.2",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
