--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "multer": "^1.2.0",
     "rimraf": "^2.5.4",
     "session-file-store": "^1.0.0",
-    "uuid": "^3.0.0",
+    "uuid": "^3.0.1",
     "winston": "^2.3.0",
-    "yargs": "^6.0.0"
+    "yargs": "^6.5.0"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
+    "babel-core": "^6.20.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.5",
-    "babel-polyfill": "^6.16.0",
+    "babel-loader": "^6.2.9",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
@@ -42,18 +42,19 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "classnames": "^2.2.5",
-    "css-loader": "^0.26.0",
-    "eslint": "^3.11.1",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.12.0",
     "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-react": "^6.7.1",
+    "eslint-plugin-react": "^6.8.0",
     "flexboxgrid": "^6.3.1",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
-    "material-ui": "^0.16.0",
-    "mocha": "^3.1.2",
+    "material-ui": "^0.16.5",
+    "mocha": "^3.2.0",
     "moment": "^2.17.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.4.0",
+    "nock": "^9.0.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-dropzone": "^3.7.3",
     "react-flexbox-grid": "^0.10.2",
     "react-ga": "^2.1.2",
@@ -63,7 +64,7 @@
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
+    "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2"
   }
