--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "eslint": "^3.12.0",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-react": "^6.8.0",
+    "fetch-mock": "^5.8.0",
     "flexboxgrid": "^6.3.1",
     "html-webpack-plugin": "^2.22.0",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.16.5",
     "mocha": "^3.2.0",
     "moment": "^2.17.1",
-    "nock": "^9.0.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.7.3",
@@ -62,6 +62,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
+    "redux-mock-store": "^1.2.1",
     "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
