--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-flexbox-grid": "^0.10.2",
     "react-ga": "^2.1.2",
     "react-redux": "^4.4.5",
+    "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
